src/test/deca/codegen/valid/avecObjet/test_cast_3.deca
class A { }
class B extends A { }
class C extends A { }

{
    A a = new B();

    // downcast impossible dynamiquement: a est un B, pas un C
    C c = (C)(a);

    // ne doit jamais s'afficher
    println("unreachable");
}
