src/test/deca/codegen/invalid/avecObjet/test_cast_3.deca
// Description :
//    Test d'un transtypage de descente invalide (B casté en C).
//    Doit provoquer une erreur à l'exécution.
//
// Resultats :
//    Erreur d'exécution (cast invalide)
//    ("unreachable" ne doit pas être affiché)
class A { }
class B extends A { }
class C extends A { }

{
    A a = new B();

    C c = (C)(a);

    println("unreachable");
}
